# 3DEngine

./: .gitignore  .gitmodules  CMakeLists.txt
shaders/: shader.vs
source/inc/: Shader.h  Texture.h  Types.h  shader.h  utils.h
source/src/: Shader.cpp  Texture.cpp  main.cpp  test.cpp
src/: main.cpp  math3d.h
